@@ -160,6 +160,9 @@ Bug Fixes
   their parameter must be a string; now you can pass an SQLExpression:
   Table.q.name.contains(func.upper('a')), for example.
 
+* Fixed a longstanding bug with sqlbuilder.Select() with groupBy being a
+  sequence.
+
 * Yet another patch to properly initialize MySQL connection encoding.
 
 * More documentation about orderBy.
